# lte/cloud/go/services/lte/obsidian/models/swagger.v1.yml
@@ -2306,6 +2306,7 @@ definitions:
           - 'FreedomFi One'
         x-nullable: false
       ho_algorithm_config:
+        #x-nullable: true
         $ref: '#/definitions/ho_algorithm_configuration'
 
   ho_algorithm_configuration:
@@ -2315,7 +2316,10 @@ definitions:
       a1_threshold_rsrp:
         type: integer
         format: uint32
+        minimum: 0
+        maximum: 97
         example: 50
+        default: 50
       lte_a1_threshold_rsrq:
         type: integer
         format: int32
@@ -2323,6 +2327,8 @@ definitions:
       hysteresis:
         type: integer
         format: int32
+        minimum: 0
+        maximum: 30
         example: 3
       time_to_trigger:
         type: string
@@ -2330,6 +2336,8 @@ definitions:
       a2_threshold_rsrp:
         type: integer
         format: int32
+        minimum: 0
+        maximum: 97
         example: 5
       lte_a2_threshold_rsrq:
         type: integer
@@ -2346,6 +2354,8 @@ definitions:
       a3_offset:
         type: integer
         format: int32
+        minimum: -30
+        maximum: 30
         example: 10
       a3_offset_anr:
         type: integer
@@ -2358,54 +2368,83 @@ definitions:
       lte_intra_a5_threshold_1_rsrp:
         type: integer
         format: int32
+        minimum: 0
+        maximum: 97
         example: 50
       lte_intra_a5_threshold_2_rsrp:
         type: integer
         format: int32
+        minimum: 0
+        maximum: 97
         example: 51
-      LTE_INTER_ANR_A5_THRESHOLD_1_RSRP:
+      lte_inter_anr_a5_threshold_1_rsrp:
         type: integer
         format: int32
+        minimum: 0
+        maximum: 97
         example: 55
-      LTE_INTER_ANR_A5_THRESHOLD_2_RSRP:
+      lte_inter_anr_a5_threshold_2_rsrp:
         type: integer
         format: int32
+        minimum: 0
+        maximum: 97
         example: 50
       b2_threshold1_rsrp:
         type: integer
         format: uint32
+        minimum: 0
+        maximum: 97
         example: 8
       b2_threshold2_rsrp:
         type: integer
         format: int32
+        minimum: -5
+        maximum: 91
         example: 8
       b2_geran_irat_threshold:
         type: integer
         format: uint32
+        minimum: 0
+        maximum: 63
         example: 8
       qrxlevmin_sib1:
         type: integer
         format: int32
+        minimum: -70
+        maximum: -22
         example: 8
+        default: -23
       qrxlevminoffset:
         type: integer
         format: uint32
+        minimum: 1
+        maximum: 8
         example: 8
+        default: 6
       s_intrasearch:
         type: integer
         format: uint32
+        minimum: 0
+        maximum: 31
         example: 8
       s_nonintrasearch:
         type: integer
         format: uint32
+        minimum: 0
+        maximum: 31
         example: 8
       qrxlevmin_sib3:
         type: integer
         format: int32
+        minimum: -70
+        maximum: -22
         example: 8
+        default: -23
       reselection_priority:
         type: integer
         format: uint32
+        minimum: 1
+        maximum: 65535
         example: 8
       threshservinglow:
         type: integer
@@ -2414,9 +2453,11 @@ definitions:
       ciphering_algorithm:
         type: string
         example: "128-EEA1,128-EEA2"
+        default: "128-EEA1,128-EEA2"
       integrity_algorithm:
         type: string
         example: "128-EIA1,128-EIA2"
+        default: "128-EIA1,128-EIA2"
   unmanaged_enodeb_configuration:
     description: Configuration for externally managed eNodeb devices.
     type: object
