# lte/gateway/python/magma/enodebd/data_models/data_model_parameters.py
@@ -16,7 +16,7 @@ class ParameterName():
     # Top-level objects
     DEVICE = 'Device'
     FAP_SERVICE = 'FAPService'
-
+    HO_A1_THRESHOLD_RSRP = 'A1 threshold rsrp'
     # Device info parameters
     GPS_STATUS = 'GPS status'
     PTP_STATUS = 'PTP status'
@@ -85,35 +85,6 @@ class ParameterName():
     PERF_MGMT_USER = 'Perf mgmt username'
     PERF_MGMT_PASSWORD = 'Perf mgmt password'
 
-    # HO algorithm parameters
-    A1_THRESHOLD_RSRP = 'A1 threshold rsrp'
-    LTE_A1_THRESHOLD_RSRQ = 'Lte a1 threshold rsrq'
-    HYSTERESIS = 'Hysteresis'
-    TIME_TO_TRIGGER = 'Time to trigger'
-    A2_THRESHOLD_RSRP = 'A2 threshold rsrp'
-    LTE_A2_THRESHOLD_RSRQ = 'Lte a2 threshold rsrq'
-    LTE_A2_THRESHOLD_RSRP_IRAT_VOLTE = 'Lte a2 threshold rsrp irat volte'
-    LTE_A2_THRESHOLD_RSRQ_IRAT_VOLTE = 'Lte a2 threshold rsrq irat volte'
-    A3_OFFSET = 'a3 offset'
-    A3_OFFSET_ANR = 'a3 offset anr'
-    A4_THRESHOLD_RSRP = 'a4 threshold rsrp'
-    LTE_INTRA_A5_THRESHOLD_1_RSRP = 'lte intra a5 threshold1 rsrp'
-    LTE_INTRA_A5_THRESHOLD_2_RSRP = 'lte intra a5 threshold2 rsrp'
-    LTE_INTER_ANR_A5_THRESHOLD_1_RSRP = 'lte inter anra5 threshold1 rsrp'
-    LTE_INTER_ANR_A5_THRESHOLD_2_RSRP = 'lte inter anra5 threshold2 rsrp'
-    B2_THRESHOLD1_RSRP = 'b2 threshold1 rsrp'
-    B2_THRESHOLD2_RSRP = 'b2 threshold2 rsrp'
-    B2_GERAN_IRAT_THRESHOLD = 'b2 geran irat threshold'
-    QRXLEVMIN_SIB1 = 'qrxlevmin sib1'
-    QRXLEVMINOFFSET = 'qrxlevminoffset'
-    S_INTRASEARCH = 's intrasearch'
-    S_NONINTRASEARCH = 's nonintrasearch'
-    QRXLEVMIN_SIB3 = 'qrxlevmin sib3'
-    RESELECTION_PRIORITY = 'reselection priority'
-    THRESHSERVINGLOW = 'threshservinglow'
-    CIPHERING_ALGORITHM = 'ciphering algorithm'
-    INTEGRITY_ALGORITHM = 'integrity algorithm'
-
 
 class TrParameterType():
     BOOLEAN = 'boolean'
@@ -121,3 +92,34 @@ class TrParameterType():
     INT = 'int'
     UNSIGNED_INT = 'unsignedInt'
     OBJECT = 'object'
+
+
+class BaicellsParameterName():
+    # HO algorithm parameters
+    HO_A1_THRESHOLD_RSRP = 'A1 threshold rsrp'
+    HO_LTE_A1_THRESHOLD_RSRQ = 'Lte a1 threshold rsrq'
+    HO_HYSTERESIS = 'Hysteresis'
+    HO_TIME_TO_TRIGGER = 'Time to trigger'
+    HO_A2_THRESHOLD_RSRP = 'A2 threshold rsrp'
+    HO_LTE_A2_THRESHOLD_RSRQ = 'Lte a2 threshold rsrq'
+    HO_LTE_A2_THRESHOLD_RSRP_IRAT_VOLTE = 'Lte a2 threshold rsrp irat volte'
+    HO_LTE_A2_THRESHOLD_RSRQ_IRAT_VOLTE = 'Lte a2 threshold rsrq irat volte'
+    HO_A3_OFFSET = 'a3 offset'
+    HO_A3_OFFSET_ANR = 'a3 offset anr'
+    HO_A4_THRESHOLD_RSRP = 'a4 threshold rsrp'
+    HO_LTE_INTRA_A5_THRESHOLD_1_RSRP = 'lte intra a5 threshold1 rsrp'
+    HO_LTE_INTRA_A5_THRESHOLD_2_RSRP = 'lte intra a5 threshold2 rsrp'
+    HO_LTE_INTER_ANR_A5_THRESHOLD_1_RSRP = 'lte inter anra5 threshold1 rsrp'
+    HO_LTE_INTER_ANR_A5_THRESHOLD_2_RSRP = 'lte inter anra5 threshold2 rsrp'
+    HO_B2_THRESHOLD1_RSRP = 'b2 threshold1 rsrp'
+    HO_B2_THRESHOLD2_RSRP = 'b2 threshold2 rsrp'
+    HO_B2_GERAN_IRAT_THRESHOLD = 'b2 geran irat threshold'
+    HO_QRXLEVMIN_CHOICE = 'qrxlevmin choice'
+    HO_QRXLEVMINOFFSET = 'qrxlevminoffset'
+    HO_S_INTRASEARCH = 's intrasearch'
+    HO_S_NONINTRASEARCH = 's nonintrasearch'
+    HO_QRXLEVMIN_RESELECTION = 'qrxlevmin reselection'
+    HO_RESELECTION_PRIORITY = 'reselection priority'
+    HO_THRESHSERVINGLOW = 'threshservinglow'
+    HO_CIPHERING_ALGORITHM = 'ciphering algorithm'
+    HO_INTEGRITY_ALGORITHM = 'integrity algorithm'
